--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -17,13 +17,13 @@
         [badgeCount]="item.label === 'Notifications' ? pendingInviteCount : undefined">
        </app-settings-item>
 
-       <div class="w-full  max-w-md bg-white flex items-center gap-4 px-4 py-3 rounded-xl shadow-sm cursor-pointer hover:bg-red-50 transition">
+       <div class="w-full  max-w-md bg-white flex items-center gap-4 px-4 py-3 rounded-xl shadow-sm cursor-pointer hover:bg-red-50 transition" (click)="logOut()">
          <fa-icon [icon]="logoutIcon" class="text-red-500 text-xl"></fa-icon>
          <span class="text-red-500 font-medium">Log out</span>
         </div>
     </div>
 
-    <div (click)="logOut()" class="flex-1 bg-gray-100 p-6 flex flex-col items-center mb-16">
+    <div class="flex-1 bg-gray-100 p-6 flex flex-col items-center mb-16">
         <div class="self-center w-[400px] md:w-[500px]">
             <router-outlet></router-outlet>
         </div>
