--- a/src/app/components/login-register-page/login-register-page.component.scss
+++ b/src/app/components/login-register-page/login-register-page.component.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 24px;
   }
   
   .mat-tab-body-content { overflow: hidden!important}
