Fix layout issues in mobile views

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- app.component.html -->
-<div *ngIf="isAuthLoaded" class="main-container relative flex flex-col min-h-screen overflow-auto">
+<div *ngIf="isAuthLoaded" class="main-container relative flex flex-col min-h-screen">
   <div class="router-container flex-1">
     <router-outlet></router-outlet>
   </div>
