--- a/src/app/components/catch-popup/catch-popup.component.scss
+++ b/src/app/components/catch-popup/catch-popup.component.scss
@@ -57,9 +57,9 @@
         top: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%);
+        background: linear-gradient(90deg, #e0e0e0 25%, #f0f0f0 50%, #e0e0e0 75%);
         background-size: 200% 100%;
-        animation: loading 1.5s infinite;
+        animation: loading 1s infinite linear;
       }
       
       &.image-loaded {
