--- a/src/app/components/catch-popup/catch-popup.component.html
+++ b/src/app/components/catch-popup/catch-popup.component.html
@@ -1,6 +1,6 @@
 <div class="catch-popup">
   <div class="catch-header">
-    <span class="custom-close-button" (click)="onCloseClick($event)">&times;</span>
+    <span class="custom-close-button" (click)="onCloseClick()">&times;</span>
     <div class="image-container" [class.image-loaded]="isImageLoaded">
       <div class="skeleton-loader"></div>
       <img [src]="getImageSource()" [alt]="catchItem.fishType" class="fish-image" (load)="onImageLoad()" />
